# spring

./: .cmakelintrc  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  FAQ  LICENSE  LICENSE.html  License.html  README  README.AUTHORS  README.MACOSX.txt  README.html  README.markdown  SConstruct  THANKS  VERSION.template  changelog.txt  directories.txt  fonts  gpl-3.0.txt  myspring  selectkeys.txt  spring-trace.files  springsettings.cfg
AI/: CMakeLists.txt  SConscript
AI/Group/: CMakeLists.txt
AI/Interfaces/: CMakeLists.txt
AI/Skirmish/: CMakeLists.txt
AI/Wrappers/: CMakeLists.txt
cont/: CMakeLists.txt  PALETTE.PAL  cmdcolors.txt  luaui.lua  selectkeys.txt  springrc-template-headless.txt  springrc-template-insource.txt  teamcolors.lua  uikeys.txt
cont/LuaUI/: CHANGELOG.txt  actions.lua  callins.lua  ctrlpanel.txt  debug.lua  fonts.lua  layout.lua  loadmodel.lua  main.lua  savetable.lua  selector.lua  setupdefs.lua  system.lua  widgets.lua
cont/base/: CMakeLists.txt  make_gamedata_arch.bat  make_gamedata_arch.sh
doc/: CMakeLists.txt  DevGuide.html  DevGuide.txt  HowToBuild.txt  HowToSyncDebug.txt  SelectionKeys.md  StartScriptFormat.txt  changelog.txt  cmds.txt  engineBranchingModel.dia  gpl-3.0.html  logApi.dia  releasechecklist.txt  uikeys.txt
doc/manpages/: make_manpages.sh  spring-dedicated.6.txt  spring-headless.6.txt  spring-multithreaded.6.txt  spring.6.txt
doc/userdocs/: FAQ.html  GettingStarted.html  Legal.html  MoreInfo.html  main.html
rts/: 3DModelParser.cpp  3DModelParser.h  3DOParser.cpp  3DOParser.h  AICallback.cpp  AICallback.h  AICheats.cpp  AICheats.h  ARB_vertex_program_extension.cpp  ARB_vertex_program_extension.h  AVIGenerator.cpp  AVIGenerator.h  AdvSky.cpp  AdvSky.h  AdvTreeDrawer.cpp  AdvTreeDrawer.h  AdvTreeGenerator.cpp  AdvTreeGenerator.h  AdvWater.cpp  AdvWater.h  AirBaseHandler.cpp  AirCAI.cpp  AirCAI.h  AirMoveType.cpp  AirMoveType.h  AirScript.cpp  AirScript.h  Aircraft.cpp  Aircraft.h  AmphibOpScript.cpp  AmphibOpScript.h  Archive7ZipDll.cpp  Archive7ZipDll.h  ArchiveBuffered.h  ArchiveFactory.cpp  ArchiveHPI.cpp  ArchiveHPI.h  ArchiveScanner.cpp  ArchiveScanner.h  ArchiveZip.cpp  (+480 more)
rts/7zip/: 7zIn.h
rts/ExternalAI/: AICallback.cpp  AICallback.h  AICheats.cpp  AICheats.h  AIInterfaceKey.cpp  AIInterfaceKey.h  AIInterfaceLibrary.cpp  AIInterfaceLibrary.h  AIInterfaceLibraryInfo.cpp  AIInterfaceLibraryInfo.h  AILegacySupport.h  AILibrary.cpp  AILibrary.h  AILibraryGlobalAI.cpp  AILibraryGlobalAI.h  AILibraryManager.cpp  AILibraryManager.h  AISCommands.cpp  AISCommands.h  CMakeLists.txt  EngineOutHandler.cpp  EngineOutHandler.h  GlobalAI.cpp  GlobalAI.h  GlobalAICallback.cpp  GlobalAICallback.h  GlobalAIHandler.cpp  GlobalAIHandler.h  Group.cpp  Group.h  GroupAI.cpp  GroupAI.h  GroupAILibrary.cpp  GroupAILibrary.h  GroupAILibraryInfo.cpp  GroupAILibraryInfo.h  GroupAIWrapper.cpp  GroupAIWrapper.h  GroupAiCallback.cpp  GroupAiCallback.h  (+44 more)
rts/GDF/: rts.GDFMakerProject  rts.h  rts.rc
rts/Game/: Action.cpp  Action.h  AviVideoCapturing.cpp  AviVideoCapturing.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraHandler.cpp  CameraHandler.h  ChatMessage.cpp  ChatMessage.h  ClientData.cpp  ClientData.h  ClientSetup.cpp  ClientSetup.h  CommandMessage.cpp  CommandMessage.h  Console.cpp  Console.h  ConsoleHistory.cpp  ConsoleHistory.h  DummyVideoCapturing.cpp  DummyVideoCapturing.h  FPSUnitController.cpp  FPSUnitController.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameControllerTextInput.cpp  GameControllerTextInput.h  GameData.cpp  GameData.h  GameDrawMode.h  GameHelper.cpp  GameHelper.h  (+72 more)
rts/Lua/: CMakeLists.txt  LuaAI.cpp  LuaAI.h  LuaAllocState.h  LuaArchive.cpp  LuaArchive.h  LuaAtlasTextures.cpp  LuaAtlasTextures.h  LuaBitOps.cpp  LuaBitOps.h  LuaBoolOps.cpp  LuaBoolOps.h  LuaBuffer.cpp  LuaBuffer.h  LuaBufferImpl.cpp  LuaBufferImpl.h  LuaCallInCheck.cpp  LuaCallInCheck.h  LuaCallInHandler.cpp  LuaCallInHandler.h  LuaCob.cpp  LuaCob.h  LuaConfig.h  LuaConstCMD.cpp  LuaConstCMD.h  LuaConstCMDTYPE.cpp  LuaConstCMDTYPE.h  LuaConstCOB.cpp  LuaConstCOB.h  LuaConstEngine.cpp  LuaConstEngine.h  LuaConstGL.cpp  LuaConstGL.h  LuaConstGame.cpp  LuaConstGame.h  LuaConstPlatform.cpp  LuaConstPlatform.h  LuaConstSpring.cpp  LuaConstSpring.h  LuaConstSystem.cpp  (+122 more)
rts/Map/: BaseGroundDrawer.cpp  BaseGroundDrawer.h  BaseGroundTextures.h  BasicMapDamage.cpp  BasicMapDamage.h  CMakeLists.txt  Ground.cpp  Ground.h  HeightLinePalette.cpp  HeightLinePalette.h  HeightMapTexture.cpp  HeightMapTexture.h  MapDamage.cpp  MapDamage.h  MapDimensions.h  MapDrawPassTypes.h  MapInfo.cpp  MapInfo.h  MapParser.cpp  MapParser.h  MapTexture.h  MetalMap.cpp  MetalMap.h  NoMapDamage.cpp  NoMapDamage.h  ReadMap.cpp  ReadMap.h
rts/Menu/: CMakeLists.txt  LobbyConnection.cpp  LobbyConnection.h  LuaMenuController.cpp  LuaMenuController.h  ScriptHandler.cpp  ScriptHandler.h  SelectMenu.cpp  SelectMenu.h  SelectionWidget.cpp  SelectionWidget.h  UpdaterWindow.cpp  UpdaterWindow.h  alphanum.hpp
rts/Net/: AutohostInterface.cpp  AutohostInterface.h  CMakeLists.txt  GameParticipant.cpp  GameParticipant.h  GameServer.cpp  GameServer.h  GameSkirmishAI.h  NetCommands.cpp  NetLog.cpp  NetLog.h
rts/Rendering/: AVIGenerator.cpp  AVIGenerator.h  CMakeLists.txt  Colors.h  CommandDrawer.cpp  CommandDrawer.h  DebugColVolDrawer.cpp  DebugColVolDrawer.h  DebugDrawerAI.cpp  DebugDrawerAI.h  DefaultPathDrawer.cpp  DefaultPathDrawer.h  ExplosionGraphics.cpp  ExplosionGraphics.h  FarTextureHandler.cpp  FarTextureHandler.h  FartextureHandler.cpp  FartextureHandler.h  FeatureDrawer.cpp  FeatureDrawer.h  FontTexture.cpp  FontTexture.h  GLContext.cpp  GLContext.h  GlobalRendering.cpp  GlobalRendering.h  GlobalRenderingInfo.h  GroundDecalHandler.cpp  GroundDecalHandler.h  GroundFlash.cpp  GroundFlash.h  GroundFlashInfo.h  HUDDrawer.cpp  HUDDrawer.h  IPathDrawer.cpp  IPathDrawer.h  Icon.h  (+53 more)
test/: CMakeLists.txt  README.md
tools/: .gitignore  CMakeLists.txt
(+6758 files in other folders)
